# bmp-conv

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MT-mode-analysis.md  Makefile  README.md  bmp-conv.c  bmp-conv.h  main.c  main.h  test_ifs.sh
.github/workflows/: analysis.yml  build.yml  lint.yml
1-seq/: Makefile  main.c  main.h  seq-con.c
2-con/: Makefile  README.md  main  main.c  main.h  mt-con  mt-con.c  mt-non-con.c  mt-utils.c  mt-utils.h
2-con/tests/: avg_plots.py  build_plots.py  comp-plots.py  test.sh
3-con/: Makefile  README.md  mt-piped-con.c
docs/: Architecture.md  Benchmark-setup.md  CLI.md  Dict.md  Filters.md  MPI-mode-analysis.md  MT-mode-analysis.md  QMT-mode-analysis.md  ST-MT-mode-analysis.md  TODO.md
infra/docker/: Dockerfile  README.md  docker-compose.yml
infra/mpi/: Dockerfile  README.md  docker-compose.yml  hosts  run.sh
libbmp/: libbmp.c  libbmp.h
logger/: log.c
src/: bmp-conv  bmp-conv.c  bmp-conv.h
src/backend/: compute-backend.c  compute-backend.h
src/backend/cpu/: cpu-backend.c  cpu-backend.h
src/backend/cpu/mpi/: mpi-exec.c  mpi-exec.h
src/backend/cpu/mpi/comm/: data-transfer.c  phases.c  phases.h  rank0-proc.c  rank0-proc.h
src/backend/cpu/mpi/compute/: filter-comp.c
src/backend/cpu/mpi/utils/: mpi-types.h  utils.c  utils.h
src/backend/cpu/mt/: mt-compute.c  mt-exec.c  mt-exec.h  mt_compute.c  mt_compute.h  mt_exec.c
src/backend/cpu/qmt/: qmt-exec.c  qmt-exec.h  qmt-threads.c  qmt-threads.h  qmt_exec.c  qmt_exec.h  qmt_queue.c  qmt_threads.c  qmt_threads.h
src/backend/cpu/qmt/utils/: qmt-queue.c  qmt-queue.h
src/backend/cpu/st/: st-exec.c  st_exec.c  st_exec.h
src/backend/gpu/: gpu-backend.c  gpu-backend.h
src/backend/gpu/core/: mw-exec.c  mw-exec.h  mw-kernels.cl  mw_exec.c  mw_exec.h
src/backend/gpu/utils/: utils.c  utils.h
src/backend/mpi/: mpi-backend.c  mpi-backend.h
src/backend/mpi/comm/: data-transfer.c  data-transfer.h  phases.c  rank0-proc.h
src/backend/mpi/compute/: filter-comp.h
src/backend/mpi/core/: exec.c
src/mode/: mode.h
src/mpi-mode/: column.c  data-transfer.c  data-transfer.h  exec.c  exec.h  filter-comp.c  filter-comp.h  mpi-types.h  phases.c  phases.h  rank0-proc.c  rank0-proc.h  row-compute.c  row-compute.h  utils.c  utils.h
src/mt-mode/: compute.c  compute.h  exec.c  exec.h  mt-types.h
src/qmt-mode/: exec.c  exec.h  queue.c  queue.h  threads.c  threads.h  utils.c
src/st-mode/: exec.c  exec.h
src/utils/: args-parse.c  args-parse.h  cli.c  cli.h  filters.c  filters.h  modes.h  mt-queue.c  mt-queue.h  mt-utils.c  mt-utils.h  pthread_barrier.h  threads-general.c  threads-general.h  utils.c  utils.h
tests/: arm-benchmark.sh  avg-plots.py  avg_plots.py  benchmark.sh  comp-plots.py  gpu-benchmark.sh  gpu-plots.py  mpi-benchmark.sh  mpi-plots.py  q-mode-benchmark.sh  qm-plots.py  qmt-benchmark.sh  qmt-plot-summary.py  qmt-plots.py  st-mt-benchmark.sh  test.sh
utils/: mt-utils.c  mt-utils.h  utils.c  utils.h
